<resources>
    <string name="app_name">PhotoTube_Android</string>

    <string name="Login">Login</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="register">Register Page\n</string>
    <string name="login">Login\n</string>
    <string name="register_btn">Sign up</string>
    <string name="upload_image">Upload Image</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="notifications">notifications</string>
    <string name="shorts">shorts\n</string>
    <string name="title_home">home</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="subscriptions">Subscriptions</string>
    <!-- other strings -->
    <string name="selected_video">Selected Video: %1$s</string>
    <!--        Login-->
    <string name="password_login">Enter password</string>
    <string name="username_login">Enter username</string>
    <string name="youtube_image">youtube</string>
    <string name="camera_img">Camera\n</string>
    <string name="comments"><u>Comments</u></string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="register_navbar">Register</string>
    <string name="like_video">like</string>
    <string name="dislike_video">dislike</string>
    <string name="liked_videos">Liked videos</string>
    <string name="Register">Register</string>
    <string name="add_video">Add video</string>
    <string name="logout">Logout</string>
    <string name="playlists">Playlists</string>
    <string name="history">History</string>
    <string name="Shorts">Shorts</string>
    <string name="Home">Home</string>
    <string name="Add_video">Add Video</string>
    <string name="_0">0</string>
    <string name="sample_video_name">Sample Video Name</string>
    <string name="author_name">Author Name</string>
    <string name="dot">•</string>
    <string name="_1_2m_views_exemple">1.2M Views</string>
    <string name="_3_days_ago">3 days ago</string>
    <string name="title_activity_video">fullscreen</string>
    <string name="fullscreen">fullscreen</string>
    <string name="share">string</string>
    <string name="edit_or_delete">delete</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="edit_video">edit</string>
    <string name="hint_video_author">hint author</string>
    <string name="save">save</string>
    <string name="hint_video_name">hint_video</string>
    <string name="select_image">select image</string>
    <string name="select_video">select video</string>
    <string name="upload_video">Upload Video</string>
    <string name="add_video11">Add Video</string>
    <string name="video_name">Video Name</string>
    <string name="author">Author</string>
    <string name="upload_video111">Upload Video</string>
    <string name="home111">Home</string>
    <string name="video_name111">Video Name</string>
    <string name="author1111">Author</string>
    <string name="_123k_views">123K views</string>
    <string name="_3_days_ago32">3 days ago</string>
    <string name="most_viewed_video">Most viewed video</string>
    <string name="profile_image">profile image\n</string>
    <string name="update">update\n</string>
    <string name="user_info_page">User Profile</string>

    <string name="editVideo">Edit Video</string>

    <string name="update_video">Update Video</string>
    <string name="choose_video">Choose video</string>
    <string name="delete_video">Delete video</string>
    <string name="views">Views</string>
    <string name="display_name_hint">Display Name</string>

</resources>