<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editVideoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_video_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editVideoAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_video_author"
        android:inputType="text"/>

    <!-- Button to select an image -->
    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image"/>

    <!-- Button to select a video -->
    <Button
        android:id="@+id/selectVideoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_video"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
