<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/username"
        android:visible="false"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/title_home" />
    <item
        android:id="@+id/nav_shorts"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/shorts" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/notifications" />
</menu>
