<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <!-- Main content layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_app_title"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="2dp"
            android:padding="16dp"
            android:text="@string/register"
            android:textColor="#A32323"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- First Name -->
        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="#78909C"
            app:layout_constraintTop_toBottomOf="@id/tv_app_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Last Name -->
        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="#78909C"
            app:layout_constraintTop_toBottomOf="@id/et_first_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Username -->
        <EditText
            android:id="@+id/et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:minHeight="40dp"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="#78909C"
            app:layout_constraintTop_toBottomOf="@id/et_last_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Email -->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="40dp"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="#78909C"
            app:layout_constraintTop_toBottomOf="@id/et_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Password -->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="#78909C"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Re-enter Password -->
        <EditText
            android:id="@+id/et_re_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:minHeight="40dp"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textColorHint="#78909C"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Gender -->
        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_re_password">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@android:color/black" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@android:color/black" />
        </RadioGroup>

        <!-- Image Upload -->

        <ImageButton
            android:id="@+id/btn_upload_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/upload_image"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_gender" />

        <ImageButton
            android:id="@+id/add_selfie"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/camera_img"
            android:scaleType="centerInside"
            android:src="@drawable/ic_selfie"
            app:layout_constraintStart_toEndOf="@+id/btn_upload_image"
            app:layout_constraintTop_toBottomOf="@+id/rg_gender" />

        <ImageView
            android:id="@+id/reg_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/circle_background_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.776"
            app:layout_constraintStart_toEndOf="@+id/add_selfie"
            app:layout_constraintTop_toBottomOf="@+id/rg_gender"
            app:layout_constraintVertical_bias="0.197"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_avatar" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#946C0303"
            android:drawablePadding="8dp"
            android:text="@string/register_btn"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_photo"
            app:layout_constraintVertical_bias="0.358" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/left_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
