<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/login_section">

        <ImageView
            android:id="@+id/user_image_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_login" />

        <TextView
            android:id="@+id/user_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_video_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_addvideo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_video"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/register_section">

        <ImageView
            android:id="@+id/register_icon_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_register" />

        <TextView
            android:id="@+id/register_icon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_navbar"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/home_section">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home111"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>
